--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ monitor_speed = 115200
 upload_protocol = stlink
 debug_tool = stlink
 
+build_unflags =
+    -U USE_HAL_CAN_REGISTER_CALLBACKS
 build_flags = 
     -D HSE_VALUE=8000000
 	-D USBCON
