--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=SimpleCAN
-version=0.1.0
+version=1.0.0
 author=Owen Williams
 maintainer=Owen Williams
-sentence=Arduino library for a Simple CAN Abstraction for stm32 devices
+sentence=Arduino library for a Simple CAN Abstraction for stm32 and esp32 devices
+paragraph=Support for stm32 (tested on stm32F405rg (can2b api) and stm32g431, portenta_h7_m4 series (fdcan api)). Support for esp32 (tested on esp32doit-devkit-v1)
 category=Communication
 url=https://github.com/owennewo/SimpleCAN
 architectures=stm32
-includes=SimpleCAN.h
+includes=simplecan.h
