--- a/examples/platformio.ini
+++ b/examples/platformio.ini
@@ -1,8 +1,10 @@
 [platformio]
 default_envs = 
-    disco_b_g431b_esc1
+    ; disco_b_g431b_esc1
     ; portenta_h7_m7
-    ; stm32f4_vesc
+    stm32f405rg_vesc
+    ; stm32f407g_disc1
+    ; storm32_v1_31_rc
     ; esp32
 test_dir=lib/SimpleCAN/test
 
@@ -24,7 +26,7 @@ build_flags =
 	-D HAL_FDCAN_MODULE_ENABLED
 	-D CAN_DEBUG
 
-[env:portenta_h7_m7]
+[env:portenta_h7_m7] ; status: loopback ok, but unit tests fail due to unity test lib conflicts
 platform = ststm32
 board = portenta_h7_m7
 framework = arduino
@@ -66,7 +68,7 @@ build_flags =
 	-D CAN_DEBUG
     -D SERIAL_TX_BUFFER_SIZE=256 
 
-[env:disco_b_g431b_esc1]
+[env:disco_b_g431b_esc1] ; status: loopback works, unit test pass
 platform = ststm32
 board = disco_b_g431b_esc1
 framework = arduino
@@ -87,7 +89,7 @@ build_flags =
     -D CAN_SHDN=PB_4
     ; -D SERIAL_RX_BUFFER_SIZE=128
 
-[env:stm32f4_vesc]
+[env:stm32f405rg_vesc]
 platform = ststm32
 board = genericSTM32F405RG
 framework = arduino
@@ -103,6 +105,42 @@ build_flags =
     -D CAN_DEBUG
     -D CAN_RX=PB_8
     -D CAN_TX=PB_9
+
+[env:stm32f407g_disc1]
+; this board is untested - need to connect serial pa2 and pa3 (rx/tx) to usb serial adapter
+platform = ststm32
+board = genericSTM32F407VGT6
+framework = arduino
+monitor_speed = 230400
+upload_protocol = stlink
+build_flags = 
+	-D USBCON
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -D USBD_USE_CDC
+    -D HAL_CAN_MODULE_ENABLED
+    -D CAN_DEBUG
+    ; -D CAN_RX=PD_0 ; <-- This pair works
+    ; -D CAN_TX=PD_1
+    ; -D CAN_RX=PB_8 ; <-- This pair works
+    ; -D CAN_TX=PB_9    
+    -D CAN_RX=PA_11 ; <-- This pair does not work (maybe because of the usb serial is connected)
+    -D CAN_TX=PA_12
+
+[env:storm32_v1_31_rc]
+; this board is untested - need to connect serial pa2 and pa3 (rx/tx) to usb serial adapter
+platform = ststm32
+board = storm32_v1_31_rc
+framework = arduino
+monitor_speed = 230400
+upload_protocol = stlink
+build_flags = 
+	-D USBCON
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -D USBD_USE_CDC
+    -D HAL_CAN_MODULE_ENABLED
+    -D CAN_DEBUG
+    -D CAN_RX=PD_0
+    -D CAN_TX=PD_1
 
 [env:esp32]
 platform = espressif32
