changing api to be more similar to uno r4 can api

--- a/examples/platformio.ini
+++ b/examples/platformio.ini
@@ -127,7 +127,7 @@ build_flags =
     -D CAN_TX=PA_12
 
 [env:storm32_v1_31_rc]
-; this board is untested - need to connect serial pa2 and pa3 (rx/tx) to usb serial adapter
+; this board doesn't compile - weird multiple definition of `USB_LP_CAN1_RX0_IRQHandler'
 platform = ststm32
 board = storm32_v1_31_rc
 framework = arduino
