--- a/examples/platformio.ini
+++ b/examples/platformio.ini
@@ -1,11 +1,15 @@
 [platformio]
 default_envs = 
     ; disco_b_g431b_esc1
+    ; nucleo_g0b1re
+    ; nucleo_l476rg
+    ; blackpill_f411ce
     ; portenta_h7_m7
-    stm32f405rg_vesc
+    ; stm32f405rg_vesc
     ; stm32f407g_disc1
     ; storm32_v1_31_rc
-    ; esp32
+    ; can_fd_stm_g4
+    esp32
 test_dir=lib/SimpleCAN/test
 
 [env:can_fd_stm_g4]
@@ -48,8 +52,9 @@ build_flags =
     -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
     -D USBD_USE_CDC
     -D SERIAL_TX_BUFFER_SIZE=256 
-    -D CAN_RX=PA_11
-    -D CAN_TX=PB_9
+    -D PIN_CAN0_RX=PA_11
+    -D PIN_CAN0_TX=PB_9
+    -D CAN_HOWMANY=1
     ; -D UNITY_INCLUDE_CONFIG_H
    
 
@@ -80,14 +85,59 @@ monitor_speed = 230400
 build_unflags = 
     ; -D HAL_FDCAN_MODULE_ENABLED
 build_flags = 
+    -D HSE_VALUE=8000000
 	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
 	-D HAL_FDCAN_MODULE_ENABLED
 	-D CAN_DEBUG
     -D SERIAL_TX_BUFFER_SIZE=256 
-    -D CAN_RX=PA_11
-    -D CAN_TX=PB_9
+    -D PIN_CAN0_RX=PA_11
+    -D PIN_CAN0_TX=PB_9
     -D CAN_SHDN=PB_4
+    -D CAN_HOWMANY=1
     ; -D SERIAL_RX_BUFFER_SIZE=128
+
+[env:nucleo_g0b1re] ; status: loopback works, unit test pass
+platform = ststm32
+board = nucleo_g0b1re
+framework = arduino
+lib_archive = false
+test_ignore=test_desktop
+monitor_speed = 230400
+; lib_deps =
+;   google/googletest @ ^1.12.1
+build_unflags = 
+    ; -D HAL_FDCAN_MODULE_ENABLED
+build_flags = 
+	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
+	-D HAL_FDCAN_MODULE_ENABLED
+	-D CAN_DEBUG
+    -D SERIAL_TX_BUFFER_SIZE=256 
+    ; -D CAN_SHDN=PB_4
+    -D PIN_CAN0_RX=PA_11
+    -D PIN_CAN0_TX=PB_9
+    -D CAN_HOWMANY=1
+
+[env:nucleo_l476rg] ; compile issue.  STM is also declaring CAN in stm32l476xx.h
+platform = ststm32
+board = nucleo_l476rg
+framework = arduino
+lib_archive = false
+test_ignore=test_desktop
+monitor_speed = 230400
+; lib_deps =
+;   google/googletest @ ^1.12.1
+build_unflags = 
+    ; -D HAL_FDCAN_MODULE_ENABLED
+build_flags = 
+	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
+	-D HAL_CAN_MODULE_ENABLED
+	-D CAN_DEBUG
+    -D SERIAL_TX_BUFFER_SIZE=256 
+    ; -D CAN_SHDN=PB_4
+    -D PIN_CAN0_RX=PA_11
+    -D PIN_CAN0_TX=PB_9
+    ; -D CAN_HOWMANY=1
+
 
 [env:stm32f405rg_vesc]
 platform = ststm32
@@ -103,8 +153,9 @@ build_flags =
     -D USBD_USE_CDC
     -D HAL_CAN_MODULE_ENABLED
     -D CAN_DEBUG
-    -D CAN_RX=PB_8
-    -D CAN_TX=PB_9
+    -D PIN_CAN0_RX=PB_8
+    -D PIN_CAN0_TX=PB_9
+    -D CAN_HOWMANY=1
 
 [env:stm32f407g_disc1]
 ; this board is untested - need to connect serial pa2 and pa3 (rx/tx) to usb serial adapter
@@ -119,17 +170,17 @@ build_flags =
     -D USBD_USE_CDC
     -D HAL_CAN_MODULE_ENABLED
     -D CAN_DEBUG
-    ; -D CAN_RX=PD_0 ; <-- This pair works
-    ; -D CAN_TX=PD_1
-    ; -D CAN_RX=PB_8 ; <-- This pair works
-    ; -D CAN_TX=PB_9    
-    -D CAN_RX=PA_11 ; <-- This pair does not work (maybe because of the usb serial is connected)
-    -D CAN_TX=PA_12
+    ; -D PIN_CAN0_RX=PD_0 ; <-- This pair works
+    ; -D PIN_CAN0_RX=PD_1
+    -D PIN_CAN0_RX=PB_8 ; <-- This pair works
+    -D PIN_CAN0_TX=PB_9    
+    ; -D CAN_RX=PA_11 ; <-- This pair does not work (maybe because of the usb serial is connected)
+    ; -D PIN_CAN0_TX=PA_12
+    -D CAN_HOWMANY=1
 
-[env:storm32_v1_31_rc]
-; this board doesn't compile - weird multiple definition of `USB_LP_CAN1_RX0_IRQHandler'
+[env:blackpill_f411ce] 
 platform = ststm32
-board = storm32_v1_31_rc
+board = blackpill_f411ce # has no CAN controller! Unsupported.
 framework = arduino
 monitor_speed = 230400
 upload_protocol = stlink
@@ -139,8 +190,32 @@ build_flags =
     -D USBD_USE_CDC
     -D HAL_CAN_MODULE_ENABLED
     -D CAN_DEBUG
-    -D CAN_RX=PD_0
-    -D CAN_TX=PD_1
+    ; -D PIN_CAN0_RX=PD_0 ; <-- This pair works
+    ; -D PIN_CAN0_TX=PD_1
+    -D PIN_CAN0_RX=PB_8 ; <-- This pair works
+    -D PIN_CAN0_TX=PB_9    
+    ; -D PIN_CAN0_RX=PA_11 ; <-- This pair does not work (maybe because of the usb serial is connected)
+    ; -D PIN_CAN0_TX=PA_12
+    -D CAN_HOWMANY=1
+
+[env:storm32_v1_31_rc]
+; somewhat untested CAN/USB seems to be messing with each other
+platform = ststm32
+board = storm32_v1_31_rc #genericSTM32F103RC
+framework = arduino
+monitor_speed = 230400
+upload_protocol = stlink
+build_unflags =
+    -D SERIAL_UART_INSTANCE
+build_flags = 
+	-D USBCON
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -D USBD_USE_CDC
+    -D HAL_CAN_MODULE_ENABLED
+    ; -D CAN_DEBUG
+    -D PIN_CAN0_RX=PB_8 #PA_11 #PD_0
+    -D PIN_CAN0_TX=PB_9 #PA_12 #PD_1
+    -D CAN_HOWMANY=1
 
 [env:esp32]
 platform = espressif32
@@ -149,5 +224,6 @@ framework = arduino
 monitor_speed = 230400
 build_flags = 
     -D CAN_DEBUG
-    -D CAN_RX=GPIO_NUM_4
-    -D CAN_TX=GPIO_NUM_5
+    -D PIN_CAN0_RX=GPIO_NUM_4
+    -D PIN_CAN0_TX=GPIO_NUM_5
+    -D CAN_HOWMANY=1
